=== 2.0 Preview Release 2 (1.99.1) / 22 Mar 2008

* Partial support for ~/.ssh/config (and related) SSH configuration files [Daniel J. Berger, Jamis Buck]

* Added Net::SSH::Test to facilitate testing complex SSH state machines [Jamis Buck]

* Reworked Net::SSH::Prompt to use conditionally-selected modules [Jamis Buck, suggested by James Rosen]

* Added Channel#eof? and Channel#eof! [Jamis Buck]

* Fixed bug in strict host key verifier on cache miss [Mike Timm]


=== 2.0 Preview Release 1 (1.99.0) / 21 Aug 2007

* First preview release of Net::SSH v2